Se eliminan eventos del click en home

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -65,7 +65,7 @@
 
                 <mat-grid-tile colspan="5">
 
-                    <button mat-raised-button type="submit" color="primary" (click)="openSnackBar()" [disabled]="!servForm.form.valid">Registrar</button>
+                    <button mat-raised-button type="submit" color="primary" [disabled]="!servForm.form.valid">Registrar</button>
 
                 </mat-grid-tile>
             </mat-grid-list>
