Se agregan botones de regreso y se quitan los logs

--- a/src/app/components/detalle-serv/detalle-serv.component.html
+++ b/src/app/components/detalle-serv/detalle-serv.component.html
@@ -1,5 +1,8 @@
 <mat-card>
     <mat-card-header>
+            <button id="back_btn" mat-mini-fab color="accent" [routerLink]="['/show/Completos']">
+                <mat-icon aria-label="Example icon-button with a heart icon">arrow_back</mat-icon>
+            </button>
         <mat-card-title>
             {{title}}
         </mat-card-title>
