--- a/src/app/components/modificar-serv/modificar-serv.component.html
+++ b/src/app/components/modificar-serv/modificar-serv.component.html
@@ -1,5 +1,8 @@
 <mat-card>
     <mat-card-header>
+        <button id="back_btn" mat-mini-fab color="accent" [routerLink]="['/show/Pendientes']">
+            <mat-icon aria-label="Example icon-button with a heart icon">arrow_back</mat-icon>
+        </button>
         <mat-card-title>
             {{title}}
         </mat-card-title>
@@ -42,18 +45,12 @@
 </mat-card>
 <mat-card>
     <form id="formulario" (ngSubmit)="actualizaServicio($event)" #servForm="ngForm">
-
         <mat-form-field>
             <input matInput placeholder="Paquetes reales" [(ngModel)]="data.paq_r" required type="text" name="paq_r">
         </mat-form-field>
-
-
         <mat-form-field>
             <input matInput placeholder="Nombre de quien entrega" [(ngModel)]="data.nombre_e" required type="text" name="nombre_e">
         </mat-form-field>
-
-
         <button type="submit" mat-raised-button mat-button color="primary" [disabled]="!servForm.form.valid">Ingresar Datos</button>
-
     </form>
 </mat-card>
